--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -16,6 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-three-fiber": "^6.0.13",
+    "recoil-persist": "^5.1.0",
+    "styled-components": "^6.0.8",
     "three": "^0.156.1"
   },
   "devDependencies": {
