--- a/frontend/economius/tsconfig.json
+++ b/frontend/economius/tsconfig.json
@@ -5,6 +5,10 @@
         "lib": ["ES2020", "DOM", "DOM.Iterable"],
         "module": "ESNext",
         "skipLibCheck": true,
+        "baseUrl": ".", // 절대경로
+        "paths": {
+            "/src/*": ["src/*"]
+        },
 
         /* Bundler mode */
         "moduleResolution": "bundler",
