--- a/frontend/economius/Dockerfile
+++ b/frontend/economius/Dockerfile
@@ -4,11 +4,15 @@ FROM node:18-alpine AS build
 # Set working directory
 WORKDIR /frontend
 
-# Set Node environment to production
-ENV NODE_ENV production
+# Set Node environment to development
+ENV NODE_ENV development
 
 # Install dependencies
 COPY package.json package-lock.json ./
+
+# If typescript is needed for the build, make sure it's in your dependencies or install it explicitly
+RUN npm install -g typescript
+
 RUN npm install
 
 # Copy source files and build
@@ -22,7 +26,7 @@ FROM nginx:1.21.3-alpine
 COPY nginx.conf /etc/nginx/nginx.conf
 
 # Copy built app to nginx web root directory
-COPY --from=build /build /usr/share/nginx/html
+COPY --from=build /frontend/build /usr/share/nginx/html  
 
 # Expose port 3000
 EXPOSE 3000
