--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-spring/three": "^9.7.3",
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
     "react": "^18.2.0",
