--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -13,8 +13,10 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
+    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-three-fiber": "^6.0.13",
     "recoil-persist": "^5.1.0",
     "styled-components": "^6.0.8",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-modal": "^3.16.0",
     "@types/three": "^0.156.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
