--- a/backend/economius/build.gradle
+++ b/backend/economius/build.gradle
@@ -22,7 +22,7 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.modelmapper:modelmapper'
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
