Feat: Stock Modal

--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -13,8 +13,10 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
+    "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-three-fiber": "^6.0.13",
