Build: npm install three 추가

--- a/frontend/economius/Dockerfile
+++ b/frontend/economius/Dockerfile
@@ -10,9 +10,8 @@ ENV NODE_ENV development
 # Install dependencies
 COPY package.json package-lock.json ./
 
-# If typescript is needed for the build, make sure it's in your dependencies or install it explicitly
 RUN npm install -g typescript
-
+RUN npm install -g three
 RUN npm install
 
 # Copy source files and build
