--- a/frontend/economius/tsconfig.json
+++ b/frontend/economius/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "noImplicitAny": true,   
         "allowSyntheticDefaultImports": true,
         "target": "ES2020",
         "useDefineForClassFields": true,
