--- a/frontend/economius/tsconfig.json
+++ b/frontend/economius/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "noImplicitAny": true,   
         "allowSyntheticDefaultImports": true,
+        "noEmitOnError": false,
         "target": "ES2020",
         "useDefineForClassFields": true,
         "lib": ["ES2020", "DOM", "DOM.Iterable"],
