--- a/frontend/economius/Dockerfile
+++ b/frontend/economius/Dockerfile
@@ -12,7 +12,7 @@ COPY package.json package-lock.json ./
 
 RUN npm install -g typescript
 RUN npm install -g three
-RUN npm install
+RUN npm install --legacy-peer-deps
 
 # Copy source files and build
 COPY . .
