--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -19,6 +19,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-three-fiber": "^6.0.13",
     "recoil-persist": "^5.1.0",
     "styled-components": "^6.0.8",
