--- a/frontend/economius/Dockerfile
+++ b/frontend/economius/Dockerfile
@@ -13,8 +13,7 @@ COPY package.json package-lock.json ./
 RUN npm install -g recoil --legacy-peer-deps
 RUN npm install -g typescript
 RUN npm install -g three
-RUN npm install 
-#--legacy-peer-deps
+RUN npm install --legacy-peer-deps
 
 # Copy source files and build
 COPY . .
