--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-three-fiber": "^6.0.13",
+    "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "styled-components": "^6.0.8",
     "three": "^0.156.1"
