--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^8.14.1",
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
+    "cyber-dice": "^2.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dice-roll": "^1.2.2",
