--- a/frontend/economius/Dockerfile
+++ b/frontend/economius/Dockerfile
@@ -10,10 +10,10 @@ ENV NODE_ENV development
 # Install dependencies
 COPY package.json package-lock.json ./
 
-RUN npm install -g recoil --force
-RUN npm install -g typescript
-RUN npm install -g three
-RUN npm install --legacy-peer-deps
+# RUN npm install -g recoil --force
+# RUN npm install -g typescript
+# RUN npm install -g three
+RUN npm install --force
 
 # Copy source files and build
 COPY . .
