--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -13,6 +13,8 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
+    "@stomp/stompjs": "^7.0.0",
+    "@types/stompjs": "^2.3.5",
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
     "cyber-dice": "^2.0.1",
@@ -25,6 +27,7 @@
     "react-three-fiber": "^6.0.13",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.0.8",
     "three": "^0.156.1"
   },
