Feat: 타임존 설정

--- a/backend/economius/Dockerfile
+++ b/backend/economius/Dockerfile
@@ -4,4 +4,4 @@ COPY build/libs/*SNAPSHOT.jar application.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java","-jar", "application.jar"]
+ENTRYPOINT ["java","-jar", "-Duser.timezone=Asia/Seoul", "application.jar"]
