--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -23,6 +23,7 @@
         "react-modal": "^3.16.1",
         "react-responsive-carousel": "^3.2.23",
         "react-router-dom": "^6.16.0",
+        "react-slide-toggle": "^0.3.5",
         "react-three-fiber": "^6.0.13",
         "recoil": "^0.7.7",
         "recoil-persist": "^5.1.0",
