--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -1,48 +1,46 @@
 {
-  "name": "vite-threejs-ts",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^9.83.9",
-    "@react-three/fiber": "^8.14.1",
-    "@stomp/stompjs": "^7.0.0",
-    "@types/stompjs": "^2.3.5",
-    "apexcharts": "^3.42.0",
-    "axios": "^1.5.0",
-    "cyber-dice": "^2.0.1",
-    "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
-    "react-dice-roll": "^1.2.2",
-    "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
-    "react-responsive-carousel": "^3.2.23",
-    "react-three-fiber": "^6.0.13",
-    "recoil": "^0.7.7",
-    "recoil-persist": "^5.1.0",
-    "sockjs-client": "^1.6.1",
-    "styled-components": "^6.0.8",
-    "three": "^0.156.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-modal": "^3.16.0",
-    "@types/three": "^0.156.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  }
+    "name": "vite-threejs-ts",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@react-spring/web": "^9.7.3",
+        "@react-three/drei": "^9.83.9",
+        "@react-three/fiber": "^8.14.1",
+        "@stomp/stompjs": "^7.0.0",
+        "@types/stompjs": "^2.3.5",
+        "apexcharts": "^3.42.0",
+        "axios": "^1.5.0",
+        "react": "^18.2.0",
+        "react-apexcharts": "^1.4.1",
+        "react-dom": "^18.2.0",
+        "react-modal": "^3.16.1",
+        "react-responsive-carousel": "^3.2.23",
+        "react-three-fiber": "^6.0.13",
+        "recoil": "^0.7.7",
+        "recoil-persist": "^5.1.0",
+        "sockjs-client": "^1.6.1",
+        "styled-components": "^6.0.8",
+        "three": "^0.156.1"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.15",
+        "@types/react-dom": "^18.2.7",
+        "@types/react-modal": "^3.16.0",
+        "@types/three": "^0.156.0",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
+        "@vitejs/plugin-react": "^4.0.3",
+        "eslint": "^8.45.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.3",
+        "typescript": "^5.0.2",
+        "vite": "^4.4.5"
+    }
 }
