Feat: 카카오 로그인 redirect

--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -1,4 +1,6 @@
 {
+    "proxy": "https://j9b109.p.ssafy.io",
+
     "name": "vite-threejs-ts",
     "private": true,
     "version": "0.0.0",
@@ -17,6 +19,7 @@
         "@types/stompjs": "^2.3.5",
         "apexcharts": "^3.42.0",
         "axios": "^1.5.0",
+        "env-cmd": "^10.1.0",
         "framer-motion": "^10.16.4",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
