feat: 로그인, 방 입장, 방 생성 UI 완료

--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -1,6 +1,5 @@
 {
     "proxy": "https://j9b109.p.ssafy.io",
-
     "name": "vite-threejs-ts",
     "private": true,
     "version": "0.0.0",
@@ -23,6 +22,7 @@
         "framer-motion": "^10.16.4",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "^18.2.0",
         "react-modal": "^3.16.1",
         "react-responsive-carousel": "^3.2.23",
@@ -33,6 +33,8 @@
         "recoil-persist": "^5.1.0",
         "sockjs-client": "^1.6.1",
         "styled-components": "^6.0.8",
+        "sweetalert2-react": "^0.8.3",
+        "sweetalert2-react-content": "^5.0.7",
         "three": "^0.156.1"
     },
     "devDependencies": {
