--- a/frontend/economius/package.json
+++ b/frontend/economius/package.json
@@ -20,6 +20,7 @@
         "axios": "^1.5.0",
         "env-cmd": "^10.1.0",
         "framer-motion": "^10.16.4",
+        "nice-react-ticker": "^2.1.0",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
         "react-copy-to-clipboard": "^5.1.0",
@@ -29,6 +30,7 @@
         "react-router-dom": "^6.16.0",
         "react-slide-toggle": "^0.3.5",
         "react-three-fiber": "^6.0.13",
+        "react-ticker": "^1.3.2",
         "recoil": "^0.7.7",
         "recoil-persist": "^5.1.0",
         "sockjs-client": "^1.6.1",
